# effect-rs

./: Cargo.toml  README.md  TESTING.md  moon.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  publish.yml
.moon/: workspace.yml
crates/effect-rs-axum/src/: routing.rs
crates/effect-rs-config/src/: lib.rs  load.rs
crates/effect-rs-tokio/src/: lib.rs
crates/effect-rs/book/: book.toml
crates/effect_rs_logger/src/: lib.rs  pipeline.rs
crates/effect_rs_reqwest/src/: lib.rs
crates/effect_rs_tower/src/: lib.rs
crates/id_effect/: Cargo.toml
crates/id_effect_axum/: Cargo.toml
crates/id_effect_axum/examples/: 010_routing_hello.rs  020_async_effect.rs  030_execute_handler.rs
crates/id_effect_axum/src/: json.rs  lib.rs
crates/id_effect_cli/: Cargo.toml
crates/id_effect_cli/src/: exit_code.rs  lib.rs
crates/id_effect_config/: Cargo.toml
crates/id_effect_config/src/: lib.rs  (+3 more)
crates/id_effect_lint/: Cargo.toml  README.md
crates/id_effect_logger/: Cargo.toml
crates/id_effect_macro/: Cargo.toml
crates/id_effect_opentelemetry/: Cargo.toml  README.md  moon.yml
crates/id_effect_opentelemetry/examples/: otel_minimal.rs
crates/id_effect_opentelemetry/src/: lib.rs  metrics_bridge.rs  propagation.rs  span_bridge.rs  subscriber.rs
crates/id_effect_platform/: Cargo.toml
crates/id_effect_proc_macro/: Cargo.toml
crates/id_effect_reqwest/: Cargo.toml
crates/id_effect_tokio/: Cargo.toml
crates/id_effect_tower/: Cargo.toml
docs/effect-ts-parity/: CHECKLIST-upstream-effect.md
scripts/: treefmt-moon.sh
(+95 files in other folders)
